Revert "fix: pre overflow"
This reverts commit c443f4d269a56855a13e32539eaed6adb11962f0.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,7 @@ blockquote {
 }
 
 .code-block {
-  --at-apply: overflow-x-auto max-w-[800px] box-content;
+  --at-apply: overflow-x-auto max-w-[800px] px-2 box-border;
 }
 
 body {
@@ -51,6 +51,10 @@ div.code-block {
   position: relative;
   border-radius: 5px;
   padding: 0 10px;
+}
+
+div.code-block pre {
+  overflow: auto;
 }
 
 div.code-block span.code-lang {
